<resources>
    <string name="app_name">English Vocab</string>
    <string name="_01">01</string>
    <string name="hi_let_s_get_started">Hi , LET’S GET STARTED :)</string>
    <string name="link_your_account">Link your account with Facebook for a better experience. Do you want to link?</string>
    <string name="yes">YES</string>
    <string name="by_continue_you_agree_to_our_terms_privacy_policy">by continue you agree to our\n<u><font fgcolor="#42C0FB">Terms</font></u> &amp; <u><font fgcolor="#42C0FB">Privacy POLICY</font></u></string>
    <string name="no">No</string>
    <string name="play_now">PLAY NOW</string>
    <string name="leader_board">LEADER BOARD</string>
    <string name="click_here_to_edit_personal_information">Click here to edit personal information</string>
    <string name="your_score">Your score</string>
    <string name="_0">0</string>
    <string name="your_level">Your Level</string>
    <string name="click_here_to_play">Click here to play</string>
    <string name="click_to_see_ranking_position">CLICK TO SEE RANKING POSITION</string>
    <string name="custom_theme_according_to_your_personality">Custom theme according to your personality</string>
    <string name="click_here_to_set_the_mode">Click here to set the mode</string>
    <string name="a_b_c">E/N/G/L/I/S/H/V/O/C/A/B</string>
    <string name="_60">60</string>
    <string name="k">K</string>
    <string name="space">_</string>
    <string name="incorrect">INCORRECT</string>
    <string name="awsome_nnow_we_can_go_future_na_few_more_step_to_victory">Awsome!\nNOw we can go future.\nA few more sTep to victory 🥰</string>
    <string name="you_just_have_only_one_pauses_use_it_effectively">You just have only one pauses.\nUse it effectively</string>
    <string name="oh_no_something_went_wrong_let_s_try_again">Oh, No!\nSomething went wrong 🥲\nLet’s try again.💪☘️🥰</string>
    <string name="watch_ads_nto_get_hint_for_this_question">Watch ads \nto get hint for this question.</string>
    <string name="your_profile">YOUR PROFILE</string>
    <string name="no_name">No Name</string>
    <string name="setting">SETTING</string>
    <string name="music">Music</string>
    <string name="sound_effect">Sound effect</string>
    <string name="vibrate">VIBRATE</string>
    <string name="report">Report</string>
    <string name="term_privacy_policy"><u>Term - Privacy policy</u></string>
    <string name="version_1">version: 1</string>
    <string name="sign_out">Sign out</string>
    <string name="level_1">Level 1</string>
    <string name="top_2">Top 2</string>
    <string name="top_1">Top 1</string>
    <string name="top_3">Top 3</string>
    <string name="play_with_me_to_become_the_king_of_english_together">Play with me TO BECOME THE KING OF ENGLISH TOGETHER 😍</string>

    <string name="you_do_great">You’ll do great!</string>
    <string name="you_were_made_for_this">You were made for this!</string>
    <string name="you_can_do_better_try_harder">You can do better, try hard!</string>
    <string name="wish_you_lot_of_luck">Wishing you lots of luck!</string>
    <string name="congratulations_let_s_review_the_results_you_have_achieved">Congratulations %s,\n - You are reached %s questions and receiving %s diamonds. \n- Reach the top %s%% best players in King of English😍</string>
    <string name="let_s_play">LET’S PLAY</string>
    <string name="agree">Agree</string>
    <string name="allow_king_of_english_send_information_to_you">Allow King of English send notifications to you</string>
    <string name="update_now">Update Now</string>
    <string name="there_is_a_new_version_please_update_to_continue_using_the_app">There is a new version, please update to continue using the app</string>
    <string name="update_details">Update details:</string>
    <string name="fix_bug_and_optimize_app">-Fix bug and optimize app</string>
    <string name="_1_0_0">1.0.0</string>
</resources>