<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="enableMusic"
            type="Boolean" />

        <variable
            name="enableSoundEffect"
            type="Boolean" />

        <variable
            name="enableVibrate"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:background="@drawable/bg_round_20"
                android:elevation="1dp"
                android:padding="16dp"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="#0C1B51"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_music"
                    allowNullTextVisible="@{true}"
                    color_disable='@{"#80A9AAAA"}'
                    color_enable='@{"#0C1B51"}'
                    stateEnable="@{enableMusic}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp"
                    android:text="@string/music"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_sound"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/btn_sound_effect"
                    allowNullTextVisible="@{true}"
                    color_disable='@{"#80A9AAAA"}'
                    color_enable='@{"#0C1B51"}'
                    stateEnable="@{enableSoundEffect}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp"
                    android:text="@string/sound_effect"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_sound"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/btn_music" />

                <TextView
                    android:id="@+id/btn_vibrate"
                    allowNullTextVisible="@{true}"
                    color_disable='@{"#80A9AAAA"}'
                    color_enable='@{"#0C1B51"}'
                    stateEnable="@{enableVibrate}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp"
                    android:text="@string/vibrate"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_vibrate_on"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sound_effect" />

                <TextView
                    android:id="@+id/btn_report"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp"
                    android:text="@string/report"
                    android:textColor="#0C1B51"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_report"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/btn_vibrate" />

                <TextView
                    android:id="@+id/txt_term"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/term_privacy_policy"
                    android:textColor="#0C1B51"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/btn_report" />

                <TextView
                    android:id="@+id/txt_version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/version_1"
                    android:textColor="#800C1B51"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView15"
                    app:layout_constraintStart_toStartOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/txt_term" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/btn_close"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/app_name"
                android:elevation="4dp"
                android:padding="8dp"
                android:translationZ="1dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                app:srcCompat="@drawable/ic_close2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>