<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_round_top_20">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImageRoundTop20" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_64dp"
                    android:background="@drawable/bg_round_15"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/link_your_account"
                    android:textColor="#fcb6cf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/bg_button_login"
                    android:drawablePadding="@dimen/_16dp"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center"
                    android:paddingStart="@dimen/_40dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_fb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/btn_no"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:background="@drawable/bg_button_login"
                    android:drawablePadding="@dimen/_16dp"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center"
                    android:paddingStart="@dimen/_40dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/ic_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_yes" />

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_32dp"
                    android:fontFamily="@font/super_corn"
                    android:gravity="center"
                    android:text="@string/by_continue_you_agree_to_our_terms_privacy_policy"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_no" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>